# taro

./: .gitignore  README.md
agents/: README.md
docker/node1-ai-compute/: .env.example  docker-compose.yml
docker/node2-core-services/: .env.example  docker-compose.yml
docker/node2-core-services/configs/nats/: nats.conf
docs/: agent-development.md  architecture.md  setup-guide.md
services/agent-runtime/: Dockerfile  pyproject.toml
services/agent-runtime/agent_runtime/: __init__.py  agent_loader.py  base_agent.py  context.py  main.py
services/agent-runtime/agent_runtime/built_in/: __init__.py  system_agent.py
services/ai-gateway/: Dockerfile  pyproject.toml
services/ai-gateway/ai_gateway/: __init__.py  config.py  main.py
services/ai-gateway/ai_gateway/routers/: __init__.py  chat.py  embeddings.py  memory.py
services/ai-gateway/ai_gateway/services/: __init__.py  ollama_service.py  qdrant_service.py
services/dashboard/: Dockerfile  next.config.ts  package-lock.json
services/dashboard/src/app/: globals.css  layout.tsx  page.tsx
services/dashboard/src/app/agents/: page.tsx
services/dashboard/src/app/briefing/: page.tsx
services/dashboard/src/app/chat/: page.tsx
services/dashboard/src/app/interests/: page.tsx
services/dashboard/src/app/login/: LoginPage.module.css  page.tsx
services/dashboard/src/app/onboarding/: OnboardingPage.module.css  page.tsx
services/dashboard/src/app/register/: page.tsx
services/dashboard/src/app/system/: page.tsx
services/dashboard/src/components/layout/: AppLayout.tsx  Header.module.css  Header.tsx  Sidebar.module.css  Sidebar.tsx
services/dashboard/src/components/ui/: LoadingSpinner.module.css  LoadingSpinner.tsx  StatusBadge.tsx
services/dashboard/src/contexts/: AuthContext.tsx  ThemeContext.tsx
services/dashboard/src/lib/: api.ts  types.ts  utils.ts
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/scheduler/: __init__.py  main.py
services/taro-api/: Dockerfile  pyproject.toml
services/taro-api/taro_api/: __init__.py  config.py  main.py
services/taro-api/taro_api/auth/: __init__.py  security.py
services/taro-api/taro_api/db/: __init__.py  database.py  models.py
services/taro-api/taro_api/routers/: agents.py  auth.py  briefing.py  chat.py  onboarding.py  profile.py  system.py
services/taro-api/taro_api/services/: __init__.py  ai_client.py  briefing_service.py  user_service.py  web_search.py
