[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Taro Agent Runtime — runs modular agents"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.0",
    "httpx>=0.25.0",
    "taro-common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
taro-common = { path = "../../packages/taro-common", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
