[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-gateway"
version = "0.1.0"
description = "Taro AI Gateway — unified API for LLM inference, embeddings, and vector memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx>=0.25.0",
    "qdrant-client>=1.7",
    "taro-common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_gateway"]

# Allow taro-common to be resolved from the local monorepo.
[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
taro-common = { path = "../../packages/taro-common", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
