[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scheduler"
version = "0.1.0"
description = "Taro Scheduler — schedules agent executions"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "nats-py>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "taro-common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
taro-common = { path = "../../packages/taro-common", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
