[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taro-api"
version = "0.1.0"
description = "Taro API — core backend service for Taro"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.25.0",
    "taro-common",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["taro_api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
taro-common = { path = "../../packages/taro-common", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
